# Model-Recommendation-System

./: .env.example  README.md  pyproject.toml  range_analysis.json
scripts/model_selection/: generate_range_analysis.py
src/model_selection/api/: main.py
src/model_selection/api/routes/: analyze.py  recommend.py  recommendation.py  semantic.py  semantic_rerank.py
src/model_selection/api/schemas/: request.py  response.py
src/model_selection/models/: clarification.py  llm_schemas.py
src/model_selection/semantic/: embedding_text_builder.py  openai_embedding_client.py
src/model_selection/semantic/pinecone/: create_index.py
src/model_selection/semantic/scripts-for-testing/: batch_embedding_builder.py  batch_openai_embeddings.py  test_embedding_builder.py  upsert_embeddings_from_json.py
src/model_selection/services/: clarification_service.py  feature_extractor.py  question_generator.py  recommendation_service.py  scoring.py  semantic_recommendation_service.py  semantic_rerank_service.py
src/shared/config/: settings.py
src/shared/core/: llm_client.py  model_data_client.py  mongodb_client.py
src/shared/utils/: config.py  logger.py  mongo_encoder.py  token_counter.py
tests/: conftest.py
tests/model_selection/: test_analyze_endpoint.py  test_clarification_service.py  test_generate_questions_flow.py  test_question_generator.py  test_schemas.py
tests/shared/: test_llm_client.py  test_mongodb_client.py
tests/shared/config/: settings.py
